Weather Service Refactoring

--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
 	"type": "project",
 	"require": {
 		"php": ">=7.1.0",
+		"ext-json": "*",
 		"fideloper/proxy": "~3.3",
 		"fzaninotto/faker": "^1.7",
 		"guzzlehttp/guzzle": "^6.3",
 		"laravel/framework": "5.5.*",
 		"laravel/tinker": "~1.0",
-		"ext-json": "*"
+		"php-http/guzzle6-adapter": "^2.0",
+		"psr/http-client": "^1.0"
 	},
 	"require-dev": {
 		"filp/whoops": "~2.0",
